--- a/index_classwok1.html
+++ b/index_classwok1.html
@@ -1,10 +1,85 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Classwork one</title>
+    <style>
+        .box {
+            height: 780px;
+            width: 1000px;
+            background: white;
+            border: 5px solid grey;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .a {
+            height: 250px;
+            /*padding: 10px;*/
+            background: chocolate;
+        }
+
+        .father {
+            height: 500px;
+            background: white;
+            display: flex;
+            margin-top: 10px;
+        }
+
+        .container {
+            width: 800px;
+        }
+
+        .F {
+            margin-left: 30px;
+            background: deeppink;
+            width: 200px;
+            height: 500px;
+        }
+
+        .B {
+
+            height: 200px;
+            background: yellowgreen;
+        }
+
+        .tr {
+            margin-top: 10px;
+            height: 290px;
+            display: flex;
+            justify-content: space-between;
+        }
+
+        .C {
+            background: yellow;
+            width: 250px
+        }
+
+        .D {
+            background: blue;
+            width: 250px
+        }
+
+        .E {
+            background: silver;
+            width: 250px
+        }
+    </style>
 </head>
 <body>
-$END$
+<div class="box">
+    <div class="a">A</div>
+    <div class="father">
+        <div class="container">
+            <div class="B">B</div>
+            <div class="tr">
+                <div class="C">C</div>
+                <div class="D">D</div>
+                <div class="E">E</div>
+            </div>
+        </div>
+        <div class="F"></div>
+    </div>
+</div>
 </body>
 </html>
