--- a/index2_2.html
+++ b/index2_2.html
@@ -8,6 +8,7 @@
             width: 1600px;
             height: 800px;
             background: white;
+            font-size: 20px;
         }
 
         .h {
@@ -58,7 +59,7 @@
         <div class="two a">Bigger Widgets</div>
         <div class="three a">Huge Widgets</div>
     </div>
-    <div class="contact"></div>
+    <div class="contact">Contact</div>
 </div>
 
 </body>
